seance 6 finnished
