# seance 6 - API/app/models/Link.js
@@ -1,0 +1,20 @@
+const Sequelize = require('sequelize');
+const db = require('../config/database');
+
+const Link = db.define('links',{
+    // id: {
+    //     type: Sequelize.INTEGER,
+    //     primaryKey: true
+    // },
+    destination_id: {
+        type: Sequelize.INTEGER,
+        foreignKey: true
+    },
+    agency_id: {
+        type: Sequelize.INTEGER,
+        foreignKey: true
+    }
+
+
+})
+module.exports = Link;
