# seance 6 - API/app/routes/destinations.js
@@ -5,6 +5,7 @@ const Op = Sequelize.Op;
 
 const db = require('../config/database');
 const Destination = require('../models/Destination');
+const Link = require('../models/Link');
 
 
 // GET a list of all destinations
@@ -14,28 +15,85 @@ router.get('/',(req, res) =>
         const dests = {
             context: destinations.map(data =>{
                 return{
+                    // id: data.id,
                     name: data.name,
                     description: data.description,
                     country: data.country
                 }
             })
         }
-        res.render('destinations',{
-            destinations: dests.context
-        });
+        res.setHeader('Content-Type', 'application/json');
+        res.end(JSON.stringify(dests.context));
+        // res.render('destinations',{
+        //     destinations: dests.context
+        // });
+        // res.json(dests.context)
     })
-    .catch(err => console.log(err))   
+    .catch(err => res.status(500).json({message: err}))   
+    
     );
 
-// get to the form
-router.get('/add',(req, res) => {
-    res.render('add')
+
+// Return a destination with the id
+router.get('/id=:destId',(req,res)=>{
+    destId = req.params.destId;
+
+    //TODO: get the agencies with a request to /search/id=destId
+
+    Destination.findByPk(destId)
+        .then( destination => {
+            const dest = {
+                context: {                    
+                    // id: destination.id,
+                    name: destination.name,
+                    description: destination.description,
+                    country: destination.country
+                }
+            }
+            res.json(dest.context)
+            // res.render('destinations',{
+            //     destinations: [dest.context]
+            // });
+        })
+        .catch(err => res.status(500).json({message: err}));
+   
 });
+
+// delete destination
+router.delete('/id=:destId',(req,res)=>{
+    destId = req.params.destId;
+    
+    // Delete all links
+    Link.destroy({
+        where: {
+            destination_id: destId
+        }
+    }).then(
+        // Delete destination
+        Destination.destroy({
+            where: {id: destId}
+        }).then( data =>{
+            res.setHeader('Content-Type', 'application/json');
+            res.end(JSON.stringify({message: "destination deleted"}));
+        }).catch(err => {
+            res.status(500).json({message: err.message})
+        })
+    ).catch(err => {
+        res.status(500).json({message: err.message})
+    })  
+
+});
+
+// get to the form
+// router.get('/add',(req, res) => {
+//     res.render('add',{destination:"destination"})
+// });
 
 // Add a new destination
 router.post('/add',(req, res) => {
     
     let {name, description, country} = req.body;
+    console.log(req.body);
     let errors = [];
 
     // validate fields
@@ -58,8 +116,14 @@ router.post('/add',(req, res) => {
             description,
             country
         })
-            .then(destinations => res.redirect('/destinations')) 
-            .catch(err => console.log(err))
+            // .then(destinations => res.redirect('/destinations')) 
+            
+            // .then(res.json({message: "destination added"}))
+            .then(dest =>{
+                res.setHeader('Content-Type', 'application/json');
+                res.end(JSON.stringify({message: "destination added"}));
+            })
+            .catch(err => res.status(500).json({message: err})) 
         }   
     }
     
@@ -84,17 +148,19 @@ router.get('/search',(req, res) =>{
         const dests = {
             context: destinations.map(data =>{
                 return{
+                    // id: data.id,
                     name: data.name,
                     description: data.description,
                     country: data.country
                 }
             })
         }
-        res.render('destinations',{
-            destinations: dests.context
-        });
+        // res.render('destinations',{
+        //     destinations: dests.context
+        // });
+        res.json(dests.context)
     })
-    .catch(err => console.log(err));
+    .catch(err => res.status(500).json({message: err})) 
 })
 
 module.exports = router;
