# seance 6 - API/openapi: '3.0.2'.yml
@@ -1,13 +1,14 @@
 openapi: '3.0.2'
 info:
-  title: Travel agency
+  title: Tragency
   description: Seance 6 of the course web architecture
   version: '1.0'
 servers:
-  - url: http://localhost:3000 
-  - url: https://api.server.test/v1
+  - url: http://localhost:3000
+  
+
 paths:
-  /destination:
+  /destinations:
     get:
       summary: List all the destinations
       responses:
@@ -17,42 +18,11 @@ paths:
             application/json:
               schema:
                 type: array
-                items:
-                  type: string
-                example: ["Ballito Green Estate","Platja d'Aro"]
-    post:
-      summary: Add a destination
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                  example: Ballito Green Estate
-                  required:
-                    - "true"
-                description:
-                  type: string
-                  example: Big Estate Near the Indian Ocean
-                  required:
-                    - "true"
-                country:
-                  type: string
-                  example: South Africa
-                  required:
-                    - "true"
-      responses:
-        '200':
-          description: OK
-          content:
-            text/plain:
-              schema:
-                type: string
-                example: Destination added
-  /destination/{destId}:
+                $ref: '#/components/schemas/Destinations'
+
+
+  # DESTINATION
+  /destinations/id={destId}:
     get:
       summary: Return a destination description with id or name
       parameters:
@@ -71,20 +41,7 @@ paths:
             application/json:
               schema:
                 type: object
-                properties:
-                  id: 
-                    type: integer
-                    format: int64
-                    example: 42
-                  name:
-                    type: string
-                    example: Ballito Green Estate
-                  description:
-                    type: string
-                    example: Big Estate Near the Indian Ocean
-                  country:
-                    type: string
-                    example: South Africa
+                $ref: '#/components/schemas/Destination'
     delete:
       summary: Deletes a destination
       parameters:
@@ -100,113 +57,69 @@ paths:
         '200':
           description: OK
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
-                example: Destination deleted
-  /searchDestination:
+                type: object
+                $ref: '#/components/schemas/GoodResponse'
+
+  /destinations/add:
     post:
-      summary: search a destination
+      summary: Add a destination
       requestBody:
         required: true
         content:
           application/json:
             schema:
               type: object
-              properties:
-                id:
-                  type: integer
-                  format: int64
-                  example: 42
-                  required:
-                    - "false"
-                name:
-                  type: string
-                  example: Ballito Green Estate
-                  required:
-                    - "false"
-                description:
-                  type: string
-                  example: Big Estate Near the Indian Ocean
-                  required:
-                    - "false"
-                country:
-                  type: string
-                  example: South Africa
-                  required:
-                    - "false"
+              $ref: '#/components/schemas/Destination'
       responses:
         '200':
-          description: A JSON filtered array of destinations
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/GoodResponse'
+
+  /destinations/search?term={term}:
+    get:
+      summary: Search with a term and get all matching destinations
+      parameters:
+        - name: term
+          in: path
+          required: true
+          description: Parameter description in CommonMark or HTML.
+          schema:
+            type: string
+            minimum: 1
+            example: Nice
+      responses:
+        '200':
+          description: A JSON dict of destination
           content:
             application/json:
               schema:
                 type: array
-                items:
-                  type: string
-  /searchAgency:
-    post:
-      summary: Return a list of all agencies linked to the destination id
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                destination_id:
-                  type: integer
-                  format: int64
-                  example: 42
-                  required:
-                    - "true"
+                $ref: '#/components/schemas/Destinations'
 
+  # AGENCY
+  /agencies: 
+    get:
+      summary: get all agencies
       responses:
-        "200":
+        '200':
           description: A JSON array of agencies
           content:
             application/json:
               schema:
                 type: array
-                items:
-                  type: string
-                example: ["WeKeepYourMoney","CheapAndUnsafe"]
-  /contactAgency:
-    post:
-      summary: Return a form to fill to contact the selected agency
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                destination_id:
-                  type: integer
-                  format: int64
-                  example: 42
-                  required:
-                    - "true"
-                agency_id:
-                  type: integer
-                  format: int64
-                  example: 69
-                  required:
-                    - "true"
+                $ref: '#/components/schemas/Agencies'
 
-      responses:
-        "200":
-          description: PDF form 
-          content:
-            application/pdf:
-              schema:
-                type: string
-                format: binary
-  /agency/{agencyId}:
+  /agencies/id={agenId}:
     get:
-      summary: Return the coordinates of the Agency
+      summary: Return an agency information with id
       parameters:
-        - name: agencyId
+        - name: agenId
           in: path
           required: true
           description: Parameter description in CommonMark or HTML.
@@ -216,33 +129,16 @@ paths:
             minimum: 1
       responses:
         '200':
-          description: A JSON dict of agency information
+          description: A JSON dict of Agency
           content:
             application/json:
               schema:
                 type: object
-                properties:
-                  id: 
-                    type: integer
-                    format: int64
-                    example: 42
-                  name:
-                    type: string
-                    example: "WeKeepYourMoney"
-                  email:
-                    type: string
-                    example: wekeepyourmoney@gmail.com
-                  phone:
-                    type: integer
-                    format: int64
-                    example: 324871937
-                  localization:
-                    type: string
-                    example: wall street n°8
+                $ref: '#/components/schemas/Agency'
     delete:
-      summary: Deletes an agency
+      summary: Deletes a agency
       parameters:
-        - name: agencyId
+        - name: agenId
           in: path
           required: true
           description: Parameter description in CommonMark or HTML.
@@ -250,15 +146,16 @@ paths:
             type: integer
             format: int64
             minimum: 1
+          example: 3
       responses:
         '200':
           description: OK
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
-                example: Agency deleted
-  /agency: 
+                type: object
+                $ref: '#/components/schemas/GoodResponse'
+  /agencies/add:  
     post:
       summary: add new agency
       requestBody:
@@ -267,31 +164,40 @@ paths:
           application/json:
             schema:
               type: object
-              properties:
-                name:
-                  type: string
-                  example: "WeKeepYourMoney"
-                email:
-                  type: string
-                  example: wekeepyourmoney@gmail.com
-                phone:
-                  type: integer
-                  format: int64
-                  example: 324871937
-                localization:
-                  type: string
-                  example: wall street n°8
+              $ref: '#/components/schemas/Agency'
       responses:
         '200':
           description: OK
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
-                example: Agency added
-  /links:
+                type: object
+                $ref: '#/components/schemas/GoodResponse'
+    
+  /agencies/search/id={destId}:
+    get:
+      summary: Return all the agencies linked to the destination
+      parameters:
+        - name: destId
+          in: path
+          required: true
+          description: Parameter description in CommonMark or HTML.
+          schema:
+            type: integer
+            format: int64
+            minimum: 1
+          example: 4
+      responses:
+        '200':
+          description: A JSON array of agencies
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/Agency'
+  /agencies/contact:
     post:
-      summary: add new link between agency and destination
+      summary: Send a form to contact the selected agency
       requestBody:
         required: true
         content:
@@ -299,24 +205,73 @@ paths:
             schema:
               type: object
               properties:
-                destination:
+                destination_id:
+                  type: integer
+                  format: int64
+                  example: 4
+                  required:
+                    - "true"
+                agency_id:
+                  type: integer
+                  format: int64
+                  example: 6
+                  required:
+                    - "true"
+                name:
+                    type: string
+                    example: "Ivan Totravel"
+                email:
                   type: string
-                  example: Platja d'Aro
-                agency:
+                  example: ivan@gmail.com
+                phone:
                   type: string
-                  example: WeKeepYourMoney
+                  example: +324871937
 
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/GoodResponse'
+
+
+  # LINKS
+  /links:
+    get:
+      summary: get all links
+      responses:
+        '200':
+          description: A JSON array of links
+          content:
+            application/json:
+              schema:
+                type: array
+                $ref: '#/components/schemas/Links'
+  /links/add:
+    post:
+      summary: add new link
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              $ref: '#/components/schemas/Link'
       responses:
         '200':
           description: OK
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
-                example: Link created
-  /links{linkId}:
-    delete:
-      summary: Deletes a link
+                type: object
+                $ref: '#/components/schemas/GoodResponse'
+
+      
+  /links/id={linkId}:
+    get:
+      summary: Return an link information with id
       parameters:
         - name: linkId
           in: path
@@ -328,11 +283,99 @@ paths:
             minimum: 1
       responses:
         '200':
+          description: A JSON dict of Link
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/Link'
+    delete:
+      summary: Deletes a link
+      parameters:
+        - name: linkId
+          in: path
+          required: true
+          description: Parameter description in CommonMark or HTML.
+          schema:
+            type: integer
+            format: int64
+            minimum: 1
+          example: 3
+      responses:
+        '200':
           description: OK
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
-                example: Link deleted
+                type: object
+                $ref: '#/components/schemas/GoodResponse'
 
 
+components:
+  schemas:
+
+    GoodResponse:
+      description: A good response
+      properties:
+        message: 
+          type: string
+          example: Operation done
+    
+    Destination:
+      description: Model containing Destination info
+      properties:
+        # id:
+        #   type: integer
+        #   example: 1
+        name:
+          type: string
+          example: Ballito Green Estate
+        description:
+          type: string
+          example: Big Estate
+        country:
+          type: string
+          example: South Africa  
+
+    Destinations:
+      description: Model containing multiple destinations
+      items:
+        type: object         
+        $ref: '#/components/schemas/Destination'
+          
+    Agency:
+      description: Model contaning agency info
+      properties:
+        name:
+          type: string
+          example: WeKeepYourMoney
+        email:
+          type: string
+          example: wekeepyourmoney@gmail.com
+        phone:
+          type: string
+          example: +324871937
+        localization:
+          type: string
+          example: wall street n°8
+
+    Agencies:
+      description: Model containing multiple agencies
+      items:
+        type: object         
+        $ref: '#/components/schemas/Agency'
+
+    Link:
+      description: Model containing link info
+      properties:
+        agency_id:
+          type: integer
+          example: 1
+        destination_id:
+          type: integer
+          example: 1
+    Links:
+      description: Model containing multiple links
+      items:
+        type: object         
+        $ref: '#/components/schemas/Link'
